--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^1.1.4",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "styled-components": "^4.1.3"
