--- a/package.json
+++ b/package.json
@@ -2,10 +2,49 @@
   "name": "react-redux-modals",
   "version": "1.0.0",
   "description": "Simple component-based modals that support auto-layering.",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
+    "clean": "rimraf build",
+    "build": "npm run clean && webpack -p",
+    "start": "webpack --watch",
+    "prepublish": "npm run build",
+    "predeploy": "cd example && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Nick Jagodzinski",
-  "license": "ISC"
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "react",
+    "redux",
+    "modal",
+    "modals"
+  ],
+  "author": "Nick Jagodzinski <jag.nick@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "styled-components": "^4.1.3"
+  },
+  "peerDependencies": {
+    "react": "^0.14.9 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.9 || ^15.0.0 || ^16.0.0",
+    "react-redux": "^4.0.0 || ^5.0.0 || ^6.0.0",
+    "redux": "^3.0.0 || ^4.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "rimraf": "^2.6.3",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
+  }
 }
