--- a/example/package.json
+++ b/example/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
+    "react-app-rewired": "^2.0.2",
     "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^5.1.1",
     "react-scripts": "^1.1.4",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "styled-components": "^4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
