--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf build",
     "build": "npm run clean && webpack -p",
-    "start": "webpack --watch",
+    "start": "webpack --watch --mode=development",
     "prepublish": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,27 +23,28 @@
   "author": "Nick Jagodzinski <jag.nick@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "styled-components": "^4.1.3"
+    "prop-types": "^15.6.2"
   },
   "peerDependencies": {
     "react": "^0.14.9 || ^15.0.0 || ^16.0.0",
     "react-dom": "^0.14.9 || ^15.0.0 || ^16.0.0",
-    "react-redux": "^4.0.0 || ^5.0.0 || ^6.0.0",
-    "redux": "^3.0.0 || ^4.0.0"
+    "react-redux": "^4.0.0 || ^5.0.0",
+    "redux": "^3.0.0 || ^4.0.0",
+    "styled-components": "^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^5.1.1",
     "redux": "^4.0.1",
     "rimraf": "^2.6.3",
+    "style-loader": "^0.23.1",
+    "styled-components": "^4.1.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   }
