added test coverage for package and examples with minor updates

--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "app",
+  "name": "react-redux-modals-examples",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
     "react-app-rewired": "^2.0.2",
     "react-dom": "^16.7.0",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
@@ -26,5 +26,17 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme-to-json": "^3.3.5",
+    "react-test-renderer": "^16.7.0",
+    "redux-mock-store": "^1.5.3"
+  },
+  "jest": {
+    "testPathIgnorePatterns": ["/node_modules/", "/__tests__/setup.js", "/__tests__/helpers/"],
+    "testMatch": ["***/__tests__/**/*.js?(x)", "**/?(*.)(spec|test).js?(x)"],
+    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup.js"
+  }
 }
