--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Simple component-based modals that support auto-layering.",
   "main": "dist/index.js",
   "scripts": {
-    "clean": "rimraf dist",
     "build": "npm run clean && webpack -p",
-    "start": "webpack --watch --mode=development",
-    "prepublish": "npm run build",
+    "clean": "rimraf dist",
     "predeploy": "cd example && npm install && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "npm test && npm run build",
+    "start": "webpack --watch --mode=development",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "files": [
     "dist"
@@ -25,7 +26,7 @@
   "peerDependencies": {
     "react": "^0.14.9 || ^15.0.0 || ^16.0.0",
     "react-dom": "^0.14.9 || ^15.0.0 || ^16.0.0",
-    "react-redux": "^4.0.0 || ^5.0.0",
+    "react-redux": "^4.0.0 || ^5.0.0 || ^6.0.0",
     "redux": "^3.0.0 || ^4.0.0",
     "styled-components": "^3.0.0 || ^4.0.0"
   },
@@ -33,16 +34,39 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "css-loader": "^2.1.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme-to-json": "^3.3.5",
+    "jest": "^24.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
+    "react-testing-library": "^5.4.4",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/example/",
+      "/vendor/",
+      "/__tests__/setup.js"
+    ],
+    "testMatch": [
+      "***/__tests__/**/*.js?(x)",
+      "**/?(*.)(spec|test).js?(x)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>__tests__/setup.js"
+    ]
   }
 }
