--- a/example/public/manifest.json
+++ b/example/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React Redux Modals Examples",
+  "name": "React Redux Modals Examples",
   "icons": [
     {
       "src": "favicon.ico",
