public homepage url for examples

--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-redux-modals-examples",
+  "homepage": "https://nickjag.github.io/react-redux-modals",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
