--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.2",
   "description": "Simple component-based modals that support auto-layering.",
   "main": "dist/index.js",
+  "repository": "nickjag/react-redux-modals",
   "scripts": {
     "build": "npm run clean && webpack -p",
     "clean": "rimraf dist",
